# cloudctl

./: .commitlintrc.json  .coveragerc  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  ANALYSIS_AND_TEST_REPORT.md  BUG_FIX_SUMMARY.md  Brewfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDENTIAL_REFRESH_ANALYSIS.md  FINAL_TESTING_SUMMARY.md  GCP_LOGIN_TEST_REPORT.md  LIVE_LOGIN_TEST_RESULTS.md  MIGRATION.md  Makefile  README.md  RELEASE.md  RENAME_SUMMARY.md  TEST_VERIFICATION_REPORT.md  conftest.py  constraints.txt  dev  install.ps1  install.sh  macos_certs.pem  mcp-audit.sh  mypy.ini  orgs.yaml  pyproject.toml  pytest.ini  some_path  tox.ini  tree.txt  uninstall.ps1  uninstall.sh
.claude/: ARCHITECTURE_REFERENCE.md  CLAUDE.md  DEVARMOR_INTEGRATION.md  GCP_AUTHENTICATION_IMPROVEMENTS.md  INTEGRATION_CHECKLIST.md  README.md  SKILL.md  jira.json  settings.json
.claude/hooks/: block-direct-cli.sh  block-error-handling-removal.sh  block-local-terraform-apply.sh  block-security-removal.sh  require-adr-for-security-changes.sh  require-confluence.sh  require-jira.sh  update-confluence-adr.sh  validate-terraform-drift.sh
.github/: ARTIFACTORY_SETUP_CHECKLIST.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SETUP_ARTIFACTORY_OIDC.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-release.yml  ci.yaml  publish-artifactory.yaml  release.yaml  security-audit.yaml  test.yaml  test.yml  tests.yml
Formula/: awsctl.rb
awsctl/: __init__.py  __main__.py  accounts.py  cli.py  cli_accounts.py  cli_use.py  core.py  help_text.py  install.py  sso_cache.py  use_exports.py  utils.py
awsctl/plugins/: __init__.py  okta.py
diagrams-src/: aws-identity-hub.yaml  awsctl-boundary.yaml  awsctl-oidc-flow.yaml  idempotency-safety.yaml  identity-broker-trust.yaml
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  CLI_REFERENCE.md  DEPLOYMENT.md  DEVELOPER_ONBOARDING_AND_INTERNAL_ARCHITECTURE.md  GCP.md  GUARDRAILS.md  MULTI_CLOUD.md  PLUGIN_DEVELOPMENT.md  ROADMAP.md  SECURITY.md  SECURITY_APPRAISAL.md  SECURITY_OPERATIONS.md  SHELL_INTEGRATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/adr/: ADR-TEMPLATE.md
docs/examples/: org.yaml
docs/originals/: ADMIN_GUIDE.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEVELOPER_ONBOARDING_AND_INTERNAL_ARCHITECTURE.md  GUARDRAILS.md  PLUGIN_DEVELOPMENT.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SECURITY_APPRAISAL.md  SECURITY_OPERATIONS.md  SHELL_INTEGRATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/wiki/: Security-Operations.md  TO-DO-LIST.md  _Sidebar.md  arch-awsctl-mission.md  arch-configuration-model.md  architecture-mission.md  break-glass-procedures.md  concepts-and-terminology.md  config-schema.md  configuration-model.md  contributor-guide.md  developer-architecture-guide.md  diagrams.md  docs-as-code-contract.md  execution-failure-modes.md  getting-started.md  home.md  identity-broker-pattern.md  interactive-and-ux-behaviour.md  plugin-framework.md  registry-and-policy-model.md  release-process.md  security-overview.md  security-trust-model.md  shell-integration.md  split-plane-architecture.md  testing-strategy.md  threat-model.md  trust-and-security-boundaries.md  writing-plugins.md
examples/: org.yaml
memory/: security_decisions.md
scripts/: full_smoke.sh  full_smoke_ext.sh  gcp-init.sh  install-awsctl.sh  reinstall.sh
src/awsctl/: __init__.py  __main__.py  _version_cli.py  accounts.py  aws.py  cli.py  cli_accounts.py  cli_dispatch.py  config.py  context_manager.py  cool_features.py  core.py  doctor.py  env_detection.py  guardrails.py  help_text.py  install.py  interactive.py  main.py  registry.py  registry_loader.py  schema.py  shell.py  sso_cache.py  use_exports.py  utils.py  wizard.py
src/awsctl/commands/: accounts.py  base.py  doctor.py  exec.py  init.py  login.py  logout.py  org.py  prompt.py  status.py  switch.py  watch.py
src/awsctl/plugins/: __init__.py  okta.py
src/awsctl/providers/: aws.py  azure.py  base.py  gcp.py
src/awsctl/wizard/: __init__.py  inquirer.py
src/cloudctl/: __init__.py  accounts.py  cli.py  cli_accounts.py  config.py  context_manager.py  core.py  doctor.py  guardrails.py  help_text.py  interactive.py  main.py  registry.py  registry_loader.py  schema.py  shell.py  sso_cache.py  use_exports.py
src/cloudctl/commands/: accounts.py  base.py  doctor.py  exec.py  gcp_iam.py  gcp_login.py  init.py  login.py  logout.py  org.py  prompt.py  status.py  watch.py
src/cloudctl/plugins/: __init__.py  okta.py
src/cloudctl/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
src/cloudctl/wizard/: __init__.py  inquirer.py
tests/: __init__.py  conftest.py  test_accounts.py  test_audit_logging.py  test_aws.py  test_aws_edge_cases.py  test_aws_provider_edge_cases.py  test_cli.py  test_cli_config.py  test_cli_coverage_boost.py  test_cli_dispatch.py  test_cli_edge_cases.py  test_cli_interactive_setup.py  test_cli_version.py  test_completion_and_uninstall.py  test_config.py  test_context_expiry.py  test_contract_guards.py  test_core.py  test_core_error_handling.py  test_coverage_90.py  test_coverage_90_v2.py  test_coverage_90_v3.py  test_coverage_boost.py  test_coverage_boost_final.py  test_coverage_final.py  test_coverage_final_push.py  test_coverage_finish.py  test_coverage_gap_fix.py  test_coverage_gap_fix_v10.py  test_coverage_gap_fix_v11.py  test_coverage_gap_fix_v5.py  test_coverage_gap_fix_v6.py  test_coverage_gap_fix_v8.py  test_coverage_okta.py  test_doctor.py  test_e2e_smoke.py  test_env_detection.py  test_exec_org.py  test_features.py  (+33 more)
tools/: comprehensive_smoke.sh  create_manifest.py  setup.py  uat_enterprise.sh  uat_suite.sh
tools/docs/: lint_docs.py  sync_wiki.sh
tools/output/: awsctl_repo_context_manifest.txt  repo_context_manifest.txt
wiki/: awsctl-wiki.md
(+9 files in other folders)
