[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awsctl"
version = "3.0.0"
description = "Enterprise Cloud Identity & Context Manager (AWS, Azure, GCP)"
authors = ["BeyondTrust CloudOps"]
license = "MIT"
packages = [{ include = "awsctl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"
pyyaml = "^6.0.1"
rich = "^13.7.0"
inquirerpy = "^0.3.4"
py-minisign = ">=0.9.1"
requests = ">=2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.2.0"
black = "^24.1.0"
bandit = "^1.7.7"
pip-audit = "^2.10.0"
checkov = "^3.2.500"

[tool.poetry.scripts]
awsctl = "awsctl.cli:main"
_awsctl_bin = "awsctl.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.coverage.run]
source = ["src/awsctl"]
branch = true
omit = [
    "src/awsctl/main.py",
    "src/awsctl/cli.py",
    "src/awsctl/help_text.py",
    "src/awsctl/__main__.py",
    "src/awsctl/_version.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass"
]
