[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cloudctl"
version = "4.1.0"
description = "Enterprise Cloud Identity & Context Manager (AWS, Azure, GCP)"
authors = ["BeyondTrust CloudOps"]
license = "MIT"
packages = [{ include = "cloudctl", from = "src" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

# ---------------------------------------------------------------------------
# Artifactory PyPI source — set CLOUDCTL_INDEX_URL env var when this is active.
# Uncomment and fill in your org's Artifactory URL once access is provisioned.
# ---------------------------------------------------------------------------
# [[tool.poetry.source]]
# name = "artifactory"
# url = "https://org.jfrog.io/artifactory/api/pypi/cloudctl-pypi/simple/"
# priority = "supplemental"

[tool.poetry.urls]
"Repository" = "https://github.com/BT-IT-Infrastructure-CloudOps/aws-terraform-infra-cloudops-cloudctl"
"Bug Tracker" = "https://github.com/BT-IT-Infrastructure-CloudOps/aws-terraform-infra-cloudops-cloudctl/issues"
"Changelog" = "https://github.com/BT-IT-Infrastructure-CloudOps/aws-terraform-infra-cloudops-cloudctl/releases"

[tool.poetry.dependencies]
# Baseline: 3.12 (security-only as of Apr 2025) + 3.13 (LTS) + 3.14 (latest, released 2025).
# CI tests all three. Min is 3.12 for broad compat; consider raising to 3.13 in 2026.
python = "^3.12"
boto3 = "^1.34.0"
pyyaml = "^6.0.2"
rich = "^14.3.0"
inquirerpy = "^0.3.4"
py-minisign = ">=0.9.1"
requests = ">=2.33.0"
argcomplete = ">=3.0"
# Minimum versions for transitive-dep CVE fixes
cryptography = ">=46.0.7"
pygments = ">=2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"
ruff = "^0.15.0"
black = ">=26.3.1"
bandit = "^1.9.0"
pip-audit = "^2.10.0"
checkov = "^3.2.525"
aiohttp = ">=3.13.4"

[tool.poetry.scripts]
cloudctl = "cloudctl.cli:main"
_cloudctl_bin = "cloudctl.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.coverage.run]
source = ["src/cloudctl"]
branch = true
omit = [
    "src/cloudctl/main.py",
    "src/cloudctl/cli.py",
    "src/cloudctl/help_text.py",
    "src/cloudctl/__main__.py",
    "src/cloudctl/_version.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass"
]
